k8s/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
  - host: dawg-dev.localhost
    http:
      paths:
        - path: /grafana
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                name: http
